javascript logical adds

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
         <link rel="stylesheet" href="style.css">
 
+        <script type="module" src="script.js" defer></script>
+
     </head>
 
     <body>
@@ -26,10 +28,7 @@
         </form>
 
           <ul id="groceryList">
-            <li id="groceryItem">Milk</li>
-            <li id="groceryItem">Eggs</li>
-            <li id="groceryItem">Coffee</li>
-            <li id="groceryItem">Ketchup</li>
+            
           </ul>
 
     </body>
